--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
     first_job:
         name: My first job
         runs-on: ubuntu-latest
+        permissions:
+          contents: read
+          pull-requests: write
         steps:
             - name: Greet the user
               run: |
@@ -21,3 +24,5 @@ jobs:
               uses: actions/checkout@v4.1.0
 
             - run: tree
+
+            - uses: devops-actions/actionlint@v0.1.2
