--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         name: My first job
         runs-on: ubuntu-latest
         permissions:
-          contents: read
+          contents: write
           pull-requests: write
         steps:
             - name: Greet the user
