--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
         steps:
             - run: tree
 
+            - uses: actions/checkout@v4
+
             - name: Get tags
               run: |
                 for tag in $(git log --format=%H ${{ github.ref_name }} | \
