remove script line breaks

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,8 @@ jobs:
 
             - name: Get tags
               run: |
-                for tag in $(git log --format=%H ${{ github.ref_name }} | \
-                xargs -n1 \
-                git describe --tags --exact-match 2>/dev/null); \
-                do \
-                    echo "$tag"
+                for tag in $(git log --format=%H ${{ github.ref_name }} | xargs -n1 git describe --tags --exact-match 2>/dev/null); do
+                  echo "$tag"
                 done
 
             - name: GitHub Script
